# PRARTIGHAT.AI

./: .gitignore  DEVELOPMENT_REPORT.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  USAGE.md  main.py  pyproject.toml  requirements.txt  test_basic.py
agents/: __init__.py  base.py  bypass.py  chain.py  exploit.py  pattern.py  recon.py  report.py
core/: __init__.py  brain.py  config.py  fractal_engine.py  genetic_engine.py  jailbreak.py  memory.py  quantum_engine.py  routing.py
tools/: executor.py
tools/parsers/: nmap.py
tools/wrappers/: nmap.py
ui/: terminal.py
